--- a/index.html
+++ b/index.html
@@ -52,9 +52,19 @@
             <p id="apasionados">Apasionados del picante, este es vuestro lugar.</p>
         </div>
     </div>
-    <div class="portada">
-        <img src="images/portada_redhotchilepepper.jpeg" class="img-fluid">
-    </div>
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/portada_redhotchilepepper.jpeg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/rstaurante_vista_interior.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/restaurante_vistas.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+      </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
