Agregado formulario de contacto

--- a/index.html
+++ b/index.html
@@ -38,33 +38,37 @@
     <div class="texto-portada">
         <div class="col-12">
             <h2 id="quienessomos">Quienes Somos</h2>
-            <p>Red Hot Chili Peppers (en adelante RHCP) nace de un viaje a Mexico, del que volvimos convencidos de que la
-            tradicional taberna mexicana podía adaptarse a la cocina española.</p>
+            <p>Red Hot Chili Peppers (en adelante RHCP) nace de un viaje a Mexico, del que volvimos convencidos de que
+                la
+                tradicional taberna mexicana podía adaptarse a la cocina española.</p>
             <p>El reto era hacer recetas españolas en clave ¨RHCP¨. En definitiva, una forma de comer de tapas con todo
-            bien ensartado, aromas a brasas y sabores nuestros.</p>
-            <p>¨RHCP¨ es un espacio inspirado en la tradicional taberna mexicana pueblerina, del mas estilo tradicional. Le
-            damos el toque español y lo interpretamos a nuestra manera, para que todo sea muy cercano y muy nuestro.</p>
+                bien ensartado, aromas a brasas y sabores nuestros.</p>
+            <p>¨RHCP¨ es un espacio inspirado en la tradicional taberna mexicana pueblerina, del mas estilo tradicional.
+                Le
+                damos el toque español y lo interpretamos a nuestra manera, para que todo sea muy cercano y muy nuestro.
+            </p>
             <p>Nuestro plato más tradicional es una sopa de camarones al estilo diablillo (hecha a fuego lento durante 4
-            horas con diversidad de chiles y habaneros), de origen muy popular en la region de Villajuarez.</p>
-            <p>Al entrar en ¨RHCP¨ encontrarás un espacio diáfano y luminoso, con una amplia terraza exterior donde podra
-            disfrutar de nuestras magnificas vistas de Madrid. Las mesas se han dispuesto de tal forma que en todo
-            momento podra ver nuestra grandiosa parrilla de carbón y nuestros mäs que cualificados chefs.</p>
+                horas con diversidad de chiles y habaneros), de origen muy popular en la region de Villajuarez.</p>
+            <p>Al entrar en ¨RHCP¨ encontrarás un espacio diáfano y luminoso, con una amplia terraza exterior donde
+                podra
+                disfrutar de nuestras magnificas vistas de Madrid. Las mesas se han dispuesto de tal forma que en todo
+                momento podra ver nuestra grandiosa parrilla de carbón y nuestros mäs que cualificados chefs.</p>
             <p id="apasionados">Apasionados del picante, este es vuestro lugar.</p>
         </div>
     </div>
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="images/portada_redhotchilepepper.jpeg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="images/rstaurante_vista_interior.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="images/restaurante_vistas.jpg" class="d-block w-100" alt="...">
-          </div>
+            <div class="carousel-item active">
+                <img src="images/portada_redhotchilepepper.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="images/rstaurante_vista_interior.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="images/restaurante_vistas.jpg" class="d-block w-100" alt="...">
+            </div>
         </div>
-      </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
