--- a/contacto.html
+++ b/contacto.html
@@ -37,33 +37,59 @@
             </div>
         </nav>
     </div>
+    <div class="container-fluid">
+        <div class="row f1">
+            <div class="row cuerpo">
+                <div class="col-md-6 col-lg-6 ">
+                    <div class="text-center help">
+                        <h2>Contactanos</h2>
+                    </div>
+                    <div class="text-center help">No olvide seleccionar su motivo</div>
+                    <br>
+                    <div class="formulario nombres">
+                        <form>
+                            <div class="row">
+                                <div class="col">
+                                    <input type="text" class="form-control" placeholder="Nombre">
+                                </div>
+                                <div class="col">
+                                    <input type="text" class="form-control" placeholder="Apellidos">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="inputEmail4"> </label>
+                                <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                            </div>
+                            <br>
+                            <div class="form-group">
+                                <label for="inlineFormCustomSelectPref">Motivo de contacto</label>
+                                <select class="custom-select" id="inlineFormCustomSelectPref">
+                                    <option selected>Escoge una opción</option>
+                                    <option value="1">Resevas</option>
+                                    <option value="2">Reclamaciones</option>
+                                    <option value="3">Otros</option>
+                                </select>
+                            </div>
+                            <br>
+                            <div class="form-group">
+                                <label for="floatingTextarea2">Cuentanos algo...</label>
+                                <textarea class="form-control" placeholder="Escriba aquí (opcional)"
+                                    id="floatingTextarea2" style="height: 5em"></textarea>
+                            </div>
+                            <br>
+                            <div class="custom-control custom-checkbox">
+                                <label class="custom-control-label" for="customControlInline">He leído y acepto la
+                                    política de privacidad</label>
+                                <input type="checkbox" class="custom-control-input" id="customControlInline">
+                            </div>
+                            <button type="submit" class="btn btn-primary my-1">Enviar</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
 
-    <div class="contacto">
-        <label>
-            Nombre:
-            <input type="text" name="name" placeholder="Escribe nombre...">
-        </label>
-        <br>
-        <label>
-            Apellido:
-            <input type="text" name="apellido" placeholder="Escribe apellido...">
-        </label>
-        <br>
-        <label>
-            Telefono:
-            <input type="tel" name="telefono" placeholder="Escribe telefono...">
-        </label>
-        <br>
-        <label>
-            Email:
-            <input type="text" name="email" placeholder="Escribe Email...">
-        </label>
-        <br>
-        <br>
-        <textarea placeholder="Comentarios adicionales..." cols="30" rows="10"></textarea></label>
-
+        </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
