--- a/menu.html
+++ b/menu.html
@@ -37,43 +37,47 @@
             </div>
         </nav>
     </div>
-    
+
     <div class="container-fluid">
         <div class="row h-5">
             <div class="col-12 background-grey">PLATOS</div>
         </div>
         <div>
             <div class="row h-25">
-            <div class="col-4"><img src="images/ensalada.jpg" class="img-fluid">Ensalada de pollo y guindilla</div>
-            <div class="col-4"><img src="images/sopa_camarones.jpeg" class="img-fluid">Sopa de camarones</div>
-            <div class="col-4"><img src="images/kimchi.jpg" class="img-fluid">Kimchi</div> 
+                <div class="col-4"><img src="images/ensalada.jpg" class="img-fluid">Ensalada de pollo y guindilla</div>
+                <div class="col-4"><img src="images/sopa_camarones.jpeg" class="img-fluid">Sopa de camarones</div>
+                <div class="col-4"><img src="images/kimchi.jpg" class="img-fluid">Kimchi</div>
+            </div>
+            <div class="row h-25">
+                <div class="col-4"><img src="images/nachos.jpg" class="img-fluid">Nachos ranchera</div>
+                <div class="col-4"><img src="images/sopa_picante.jpg" class="img-fluid">Sopa de ternera picante</div>
+                <div class="col-4"><img src="images/ternera_estofada.jpg" class="img-fluid">Ternera estofada con judia
+                    roja</div>
+            </div>
+            <div class="row h-5">
+                <div class="col-12 background-red">BEBIDAS</div>
+            </div>
+            <div class="row h-17">
+                <div class="col-3"><img src="images/margarita_tamarindo.jpg" class="img-fluid">Margarita y tamarindo
+                </div>
+                <div class="col-3"><img src="images/tequila_lima.jpg" class="img-fluid">Tequila y lima</div>
+                <div class="col-3"><img src="images/tequila_ron_naranja.jpg" class="img-fluid">Tequila con ron y naranja
+                </div>
+                <div class="col-3"><img src="images/tequila_violeta.jpg" class="img-fluid">Tequila y violeta</div>
+            </div>
+            <div class="row h-5">
+                <div class="col-12 background-red">SORBETES</div>
+            </div>
+            <div class="row h-17">
+                <div class="col-4"><img src="images/sorbete-naranja-mango.jpg" class="img-fluid">Naranja y mango</div>
+                <div class="col-4"><img src="images/sorbete_granada.jpg" class="img-fluid">Granada</div>
+                <div class="col-4"><img src="images/sorbete_limon_kava_cointreau.jpeg" class="img-fluid">Lima, kava y
+                    cointreau</div>
+            </div>
         </div>
-        <div class="row h-25">
-            <div class="col-4"><img src="images/nachos.jpg" class="img-fluid">Nachos ranchera</div>
-            <div class="col-4"><img src="images/sopa_picante.jpg" class="img-fluid">Sopa de ternera picante</div>
-            <div class="col-4"><img src="images/ternera_estofada.jpg" class="img-fluid">Ternera estofada con judia roja</div> 
-        </div>
-        <div class="row h-5">
-            <div class="col-12 background-red">BEBIDAS</div>
-        </div>
-        <div class="row h-17">
-            <div class="col-3"><img src="images/margarita_tamarindo.jpg" class="img-fluid" >Margarita y tamarindo</div>
-            <div class="col-3"><img src="images/tequila_lima.jpg" class="img-fluid">Tequila y lima</div>
-            <div class="col-3"><img src="images/tequila_ron_naranja.jpg" class="img-fluid">Tequila con ron y naranja</div>
-            <div class="col-3"><img src="images/tequila_violeta.jpg" class="img-fluid">Tequila y violeta</div>  
-        </div>
-        <div class="row h-5">
-            <div class="col-12 background-red">SORBETES</div>
-        </div>
-        <div class="row h-17">
-            <div class="col-4"><img src="images/sorbete-naranja-mango.jpg" class="img-fluid">Naranja y mango</div>
-            <div class="col-4"><img src="images/sorbete_granada.jpg" class="img-fluid">Granada</div>
-            <div class="col-4"><img src="images/sorbete_limon_kava_cointreau.jpeg" class="img-fluid">Lima, kava y cointreau</div>
-        </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
