Ajustada menu del apartado carta

--- a/menu.html
+++ b/menu.html
@@ -40,44 +40,99 @@
 
     <div class="container-fluid">
         <div class="row h-5">
-            <div class="col-12 background-grey">PLATOS</div>
+            <div class="col-4" id="menu">PLATOS</div>
         </div>
         <div>
             <div class="row h-25">
-                <div class="col-4"><img src="images/ensalada.jpg" class="img-fluid">Ensalada de pollo y guindilla</div>
-                <div class="col-4"><img src="images/sopa_camarones.jpeg" class="img-fluid">Sopa de camarones</div>
-                <div class="col-4"><img src="images/kimchi.jpg" class="img-fluid">Kimchi</div>
+                <div style="width: 20rem;">
+                    <img src="images/ensalada.jpg" class="card-img-top" height="200">
+                    <div class="card-body">
+                        <p class="card-text">Ensalada de pollo rancherito con perejil, piñones y guindillas</p>
+                    </div>
+                </div>
+                <div style="width: 20rem;">
+                    <img src="images/sopa_camarones.jpeg" class="card-img-top" height="200">
+                    <div class="card-body">
+                        <p class="card-text">Crema de camarones rehogados en salsa chipotle y queso agrio</p>
+                    </div>
+                </div>
+                <div style="width: 20rem;">
+                    <img src="images/kimchi.jpg" class="card-img-top" height="200">
+                    <div class="card-body">
+                        <p class="card-text">Repollo fermentado en soja con tomate del diablo (a base de habanero)</p>
+                    </div>
+                </div>
             </div>
             <div class="row h-25">
-                <div class="col-4"><img src="images/nachos.jpg" class="img-fluid">Nachos ranchera</div>
-                <div class="col-4"><img src="images/sopa_picante.jpg" class="img-fluid">Sopa de ternera picante</div>
-                <div class="col-4"><img src="images/ternera_estofada.jpg" class="img-fluid">Ternera estofada con judia
-                    roja</div>
+                <div style="width: 20rem;">
+                    <img src="images/nachos.jpg" class="card-img-top" height="200">
+                    <div class="card-body">
+                        <p class="card-text">Nachos rancheros en base de harina de maiz con carne picada de ternera,
+                            guindilla muy troceada y cebollino</p>
+                    </div>
+                </div>
+                <div style="width: 20rem;">
+                    <img src="images/sopa_picante.jpg" class="card-img-top" height="200">
+                    <div class="card-body">
+                        <p class="card-text">Sopa a base de chiles y habanero con tofu, patata, y un toque de hierba
+                            buena</p>
+                    </div>
+                </div>
+                <div style="width: 20rem;">
+                    <img src="images/ternera_estofada.jpg" class="card-img-top" height="200">
+                    <div class="card-body">
+                        <p class="card-text">Ternera estofada con frijoles y salsa pimenton-guindilla</p>
+                    </div>
+                </div>
             </div>
             <div class="row h-5">
-                <div class="col-12 background-red">BEBIDAS</div>
+                <div class="col-4" id="menu">BEBIDAS</div>
             </div>
             <div class="row h-17">
-                <div class="col-3"><img src="images/margarita_tamarindo.jpg" class="img-fluid">Margarita y tamarindo
+                <div style="width: 20rem;">
+                    <img src="images/margarita_tamarindo.jpg" class="card-img-top" height="200">
+                    <div class="card-body">
+                        <p class="card-text">Margarita tamarindo</p>
+                    </div>
                 </div>
-                <div class="col-3"><img src="images/tequila_lima.jpg" class="img-fluid">Tequila y lima</div>
-                <div class="col-3"><img src="images/tequila_ron_naranja.jpg" class="img-fluid">Tequila con ron y naranja
+                <div style="width: 20rem;">
+                    <img src="images/tequila_lima.jpg" class="card-img-top" height="200">
+                    <div class="card-body">
+                        <p class="card-text">Tequila con lima</p>
+                    </div>
                 </div>
-                <div class="col-3"><img src="images/tequila_violeta.jpg" class="img-fluid">Tequila y violeta</div>
+                <div style="width: 20rem;">
+                    <img src="images/tequila_violeta.jpg" class="card-img-top" height="200">
+                    <div class="card-body">
+                        <p class="card-text">Tequila con violetas</p>
+                    </div>
+                </div>
+                <div class="row h-5">
+                    <div class="col-4" id="menu">SORBETES</div>
+                </div>
+                <div class="row h-17">
+                    <div style="width: 20rem;">
+                        <img src="images/sorbete-naranja-mango.jpg" class="card-img-top" height="200">
+                        <div class="card-body">
+                            <p class="card-text">Naranja y mango</p>
+                        </div>
+                    </div>
+                    <div style="width: 20rem;">
+                        <img src="images/sorbete_granada.jpg" class="card-img-top" height="200">
+                        <div class="card-body">
+                            <p class="card-text">Granada</p>
+                        </div>
+                    </div>
+                    <div style="width: 20rem;">
+                        <img src="images/sorbete_limon_kava_cointreau.jpeg" class="card-img-top" height="200">
+                        <div class="card-body">
+                            <p class="card-text">Limon, kava y cointreau</p>
+                        </div>
+                </div>
             </div>
-            <div class="row h-5">
-                <div class="col-12 background-red">SORBETES</div>
-            </div>
-            <div class="row h-17">
-                <div class="col-4"><img src="images/sorbete-naranja-mango.jpg" class="img-fluid">Naranja y mango</div>
-                <div class="col-4"><img src="images/sorbete_granada.jpg" class="img-fluid">Granada</div>
-                <div class="col-4"><img src="images/sorbete_limon_kava_cointreau.jpeg" class="img-fluid">Lima, kava y
-                    cointreau</div>
-            </div>
-        </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+                crossorigin="anonymous"></script>
 </body>
 
 </html>
