--- a/contacto.html
+++ b/contacto.html
@@ -39,7 +39,7 @@
     </div>
     <div class="container-fluid">
         <div class="row f1">
-            <div class="row cuerpo">
+            <div class="row cuerpo" id="formulariocontacto">
                 <div class="col-md-6 col-lg-6 ">
                     <div class="text-center help">
                         <h2>Contactanos</h2>
