Ajustes en menu, index y styles

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="images/portada_redhotchilepepper.jpeg" class="d-block w-100" alt="...">
+                <img src="images/portada_redhotchilepepper.jpeg" class="d-block w-100">
             </div>
             <div class="carousel-item">
-                <img src="images/rstaurante_vista_interior.jpg" class="d-block w-100" alt="...">
+                <img src="images/rstaurante_vista_interior.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
-                <img src="images/restaurante_vistas.jpg" class="d-block w-100" alt="...">
+                <img src="images/restaurante_vistas.jpg" class="d-block w-100">
             </div>
         </div>
     </div>
