--- a/menu.html
+++ b/menu.html
@@ -38,101 +38,102 @@
         </nav>
     </div>
 
-    <div class="container-fluid">
+    <div class="container-fluid" id="full">
         <div class="row h-5">
             <div class="col-4" id="menu">PLATOS</div>
         </div>
-        <div>
-            <div class="row h-25">
-                <div style="width: 20rem;">
-                    <img src="images/ensalada.jpg" class="card-img-top" height="200">
-                    <div class="card-body">
-                        <p class="card-text">Ensalada de pollo rancherito con perejil, piñones y guindillas</p>
-                    </div>
-                </div>
-                <div style="width: 20rem;">
-                    <img src="images/sopa_camarones.jpeg" class="card-img-top" height="200">
-                    <div class="card-body">
-                        <p class="card-text">Crema de camarones rehogados en salsa chipotle y queso agrio</p>
-                    </div>
-                </div>
-                <div style="width: 20rem;">
-                    <img src="images/kimchi.jpg" class="card-img-top" height="200">
-                    <div class="card-body">
-                        <p class="card-text">Repollo fermentado en soja con tomate del diablo (a base de habanero)</p>
-                    </div>
+        <div class="row h-25">
+            <div style="width: 20rem;">
+                <img src="images/ensalada.jpg" class="card-img-top" height="200">
+                <div class="card-body">
+                    <p class="card-text">Ensalada de pollo rancherito con perejil, piñones y guindillas</p>
                 </div>
             </div>
-            <div class="row h-25">
-                <div style="width: 20rem;">
-                    <img src="images/nachos.jpg" class="card-img-top" height="200">
-                    <div class="card-body">
-                        <p class="card-text">Nachos rancheros en base de harina de maiz con carne picada de ternera,
-                            guindilla muy troceada y cebollino</p>
-                    </div>
-                </div>
-                <div style="width: 20rem;">
-                    <img src="images/sopa_picante.jpg" class="card-img-top" height="200">
-                    <div class="card-body">
-                        <p class="card-text">Sopa a base de chiles y habanero con tofu, patata, y un toque de hierba
-                            buena</p>
-                    </div>
-                </div>
-                <div style="width: 20rem;">
-                    <img src="images/ternera_estofada.jpg" class="card-img-top" height="200">
-                    <div class="card-body">
-                        <p class="card-text">Ternera estofada con frijoles y salsa pimenton-guindilla</p>
-                    </div>
+            <div style="width: 20rem;">
+                <img src="images/sopa_camarones.jpeg" class="card-img-top" height="200">
+                <div class="card-body">
+                    <p class="card-text">Crema de camarones rehogados en salsa chipotle y queso agrio</p>
                 </div>
             </div>
-            <div class="row h-5">
-                <div class="col-4" id="menu">BEBIDAS</div>
-            </div>
-            <div class="row h-17">
-                <div style="width: 20rem;">
-                    <img src="images/margarita_tamarindo.jpg" class="card-img-top" height="200">
-                    <div class="card-body">
-                        <p class="card-text">Margarita tamarindo</p>
-                    </div>
-                </div>
-                <div style="width: 20rem;">
-                    <img src="images/tequila_lima.jpg" class="card-img-top" height="200">
-                    <div class="card-body">
-                        <p class="card-text">Tequila con lima</p>
-                    </div>
-                </div>
-                <div style="width: 20rem;">
-                    <img src="images/tequila_violeta.jpg" class="card-img-top" height="200">
-                    <div class="card-body">
-                        <p class="card-text">Tequila con violetas</p>
-                    </div>
-                </div>
-                <div class="row h-5">
-                    <div class="col-4" id="menu">SORBETES</div>
-                </div>
-                <div class="row h-17">
-                    <div style="width: 20rem;">
-                        <img src="images/sorbete-naranja-mango.jpg" class="card-img-top" height="200">
-                        <div class="card-body">
-                            <p class="card-text">Naranja y mango</p>
-                        </div>
-                    </div>
-                    <div style="width: 20rem;">
-                        <img src="images/sorbete_granada.jpg" class="card-img-top" height="200">
-                        <div class="card-body">
-                            <p class="card-text">Granada</p>
-                        </div>
-                    </div>
-                    <div style="width: 20rem;">
-                        <img src="images/sorbete_limon_kava_cointreau.jpeg" class="card-img-top" height="200">
-                        <div class="card-body">
-                            <p class="card-text">Limon, kava y cointreau</p>
-                        </div>
+            <div style="width: 20rem;">
+                <img src="images/kimchi.jpg" class="card-img-top" height="200">
+                <div class="card-body">
+                    <p class="card-text">Repollo fermentado en soja con tomate del diablo (a base de habanero)</p>
                 </div>
             </div>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-                crossorigin="anonymous"></script>
+        </div>
+        <div class="row h-25">
+            <div style="width: 20rem;">
+                <img src="images/nachos.jpg" class="card-img-top" height="200">
+                <div class="card-body">
+                    <p class="card-text">Nachos rancheros en base de harina de maiz con carne picada de ternera,
+                        guindilla muy troceada y cebollino</p>
+                </div>
+            </div>
+            <div style="width: 20rem;">
+                <img src="images/sopa_picante.jpg" class="card-img-top" height="200">
+                <div class="card-body">
+                    <p class="card-text">Sopa a base de chiles y habanero con tofu, patata, y un toque de hierba
+                        buena</p>
+                </div>
+            </div>
+            <div style="width: 20rem;">
+                <img src="images/ternera_estofada.jpg" class="card-img-top" height="200">
+                <div class="card-body">
+                    <p class="card-text">Ternera estofada con frijoles y salsa pimenton-guindilla</p>
+                </div>
+            </div>
+        </div>
+        <div class="row h-5">
+            <div class="col-4" id="menu">BEBIDAS</div>
+        </div>
+        <div class="row h-17">
+            <div style="width: 20rem;">
+                <img src="images/margarita_tamarindo.jpg" class="card-img-top" height="200">
+                <div class="card-body">
+                    <p class="card-text">Margarita tamarindo</p>
+                </div>
+            </div>
+            <div style="width: 20rem;">
+                <img src="images/tequila_lima.jpg" class="card-img-top" height="200">
+                <div class="card-body">
+                    <p class="card-text">Tequila con lima</p>
+                </div>
+            </div>
+            <div style="width: 20rem;">
+                <img src="images/tequila_violeta.jpg" class="card-img-top" height="200">
+                <div class="card-body">
+                    <p class="card-text">Tequila con violetas</p>
+                </div>
+            </div>
+        </div>
+        <div class="row h-5">
+            <div class="col-4" id="menu">SORBETES</div>
+        </div>
+        <div class="row h-17">
+            <div style="width: 20rem;">
+                <img src="images/sorbete-naranja-mango.jpg" class="card-img-top" height="200">
+                <div class="card-body">
+                    <p class="card-text">Naranja y mango</p>
+                </div>
+            </div>
+            <div style="width: 20rem;">
+                <img src="images/sorbete_granada.jpg" class="card-img-top" height="200">
+                <div class="card-body">
+                    <p class="card-text">Granada</p>
+                </div>
+            </div>
+            <div style="width: 20rem;">
+                <img src="images/sorbete_limon_kava_cointreau.jpeg" class="card-img-top" height="200">
+                <div class="card-body">
+                    <p class="card-text">Limon, kava y cointreau</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
