--- a/contacto.html
+++ b/contacto.html
@@ -74,7 +74,7 @@
                             <div class="form-group">
                                 <label for="floatingTextarea2">Cuentanos algo...</label>
                                 <textarea class="form-control" placeholder="Escriba aquí (opcional)"
-                                    id="floatingTextarea2" style="height: 5em"></textarea>
+                                    id="floatingTextarea2" style="height: 5em" maxlength="150"></textarea>
                             </div>
                             <br>
                             <div class="custom-control custom-checkbox">
